kubernetes/apps/cicd/tekton-pipelines/tekton/dashboard/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Tekton Dashboard
    gethomepage.dev/description: CI/CD Pipeline Dashboard
    gethomepage.dev/group: Development
    gethomepage.dev/icon: tekton.png
    gethomepage.dev/pod-selector: "app=tekton-dashboard"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "tekton.${DOMAIN1}"
  rules:
    - backendRefs:
        - name: tekton-dashboard
          port: 9097
